--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .navBtn{
+        @apply hidden h-6 w-6 md:inline-flex cursor-pointer object-contain 
+        hover:scale-125 transition-all duration-150 ease-out;
+    }
+    .btn{
+        @apply h-7 hover:scale-125 transition-all
+        duration-150 cursor-pointer
+
+    }
+}
+
